# aoc2023

./: .gitignore  Cargo.toml  README.md  benchmarks.txt  dhat-heap.json  justfile
daily-template/: Cargo.toml
daily-template/src/: part2.rs
day-01/: Cargo.toml
day-01/src/: error.rs  part1.rs  part2.rs
day-02/: Cargo.toml
day-02/src/: error.rs  part1.rs  part2.rs
day-03/: Cargo.toml
day-03/src/: part1.rs  part2.rs
day-04/: Cargo.toml
day-04/src/: error.rs  lib.rs  part1.rs  part2.rs
day-05/: Cargo.toml
day-05/src/: error.rs  part1.rs  part2.rs
day-06/: Cargo.toml
day-06/src/: error.rs  part1.rs  part2.rs
day-07/: Cargo.toml
day-07/benches/: benchmarks.rs
day-07/src/: error.rs  part1.rs
scratch/: Cargo.toml
scratch/src/: main.rs
scripts/: get-aoc-input.rs
